# objektinisProg2

./: .gitignore  1darboHeaderis.h  1darboHeaderisMasyvas.h  1darboHeaderisVect.h  1tyrimas.cpp  1tyrimas.h  CMakeLists.txt  LaikoMatavimas.h  README.md  TYRIMAS3.TXT  TYRIMAS4.TXT  failinis.txt  generuoti_failus.cpp  generuoti_failus.h  makefile  rezultataiT.txt  rikiavimas.cpp  rikiavimas.h  studentai.txt  studentas.cpp  studentas.h  sufailais.cpp  sufailais.h  test_studentai.txt  tyrimas2.cpp  tyrimas2.h  tyrimas3.cpp  tyrimas3.h  tyrimas4.cpp  tyrimas5.cpp  tyrimas5.h  tyrimas6.cpp  tyrimas6.h  v.pradine.cpp  v0.1.cpp  v0.1masyvas.cpp  v0.1vector.cpp  v0.2.cpp  v0.3.cpp  v0.4.cpp  (+1 more)
Include/: generuoti_failus.h  rikiavimas.h  studentas.h  sufailais.h  tyrimas2.h  tyrimas4.h  tyrimas5.h  tyrimas6.h
Src/: 1verijosFunkc.cpp  LaikoMatavimas.cpp  googleTests.cpp  strategija3.cpp  studentas.cpp  testRuleOf5.cpp  v1.1.cpp  v1.2.cpp  versijos1Funkc.cpp
docs/: Doxyfile
docs/html/: _laiko_matavimas_8cpp.html  _laiko_matavimas_8h.html  _laiko_matavimas_8h.js  _laiko_matavimas_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_laiko_matavimas-members.html  class_laiko_matavimas.html  class_laiko_matavimas.js  class_studentas-members.html  class_studentas.html  class_studentas.js  class_zmogus-members.html  class_zmogus.html  class_zmogus.js  classes.html  dir_413f4e031a85da0d68269c6fd2f76e1c.html  dir_413f4e031a85da0d68269c6fd2f76e1c.js  dir_65259a1c7a39b354db84d4e72589caf3.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  hierarchy.js  index.html  md__r_e_a_d_m_e.html  navtreedata.js  (+31 more)
include/: LaikoMatavimas.h  strategija3.h  studentas.h  testRuleOf5.h  versijos1Funkc.h  zmogus.h
results/: rezultatai.txt
src/: LaikoMatavimas.cpp  generuoti_failus.cpp  rikiavimas.cpp  studentas.cpp  sufailais.cpp  tyrimas1.cpp  tyrimas2.cpp  tyrimas3.cpp  tyrimas4.cpp  tyrimas5.cpp  tyrimas6.cpp  v1.cpp
(+96 files in other folders)
